# kerbal-api

./: README.md  pyproject.toml  scratch.ipynb  setup.cfg
kerbal_api/: utils.py
kerbal_api/cfg_parser/: coercing_reads.py  constants.py  file_finder.py  parser.py  typedefs.py
kerbal_api/querying/: __init__.py  api.py  data_manager.py  interpreter.py  schema.py  tokens.py
kerbal_api/tests/: test_interpreter.py  test_parse_ksp_files.py  test_parse_ksp_parts.py
scripts/: fix_lint.sh  lint.sh
